feat: Add presence management and friend request handling
- Implemented PresenceController and PresenceService for managing user presence status.
- Added FriendRequestsController to handle incoming friend requests in the UI.
- Introduced PresenceHeartbeatService to send periodic presence updates.
- Updated FriendResponse to include status field for friend requests.
- Enhanced GatewayConfig to support configurable gateway scheme.
- Modified FXML files for friend request dialogs and chat view.
- Updated Dockerfiles and configurations for mail service and roundcube.
- Removed hardcoded credentials and replaced with environment variable references.
- Added .env.example files for user-service and chat-service with placeholders for sensitive data.
- Created unit tests for FriendService and PresenceService to ensure functionality.