@@ -3,13 +3,13 @@ package secretchat.chatservice.api.controller;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.web.bind.annotation.*;
 import secretchat.chatservice.api.mapper.FriendApiMapper;
-import secretchat.chatservice.api.mapper.UserProfileApiMapper;
 import secretchat.chatservice.api.request.AddFriendRequest;
 import secretchat.chatservice.api.response.FriendResponse;
-import secretchat.chatservice.api.response.UserProfileResponse;
 import secretchat.chatservice.application.port.in.FriendUseCase;
 import secretchat.chatservice.application.port.in.UserProfileUseCase;
 import secretchat.chatservice.domain.model.Friend;
@@ -29,50 +29,127 @@ public class FriendController {
     private final SimpMessagingTemplate messagingTemplate;
 
     @PostMapping
-    public ResponseEntity<FriendResponse> addFriend(@Valid @RequestBody AddFriendRequest request) {
-        Friend friend = friendUseCase.addFriendByUsername(request.getUserId(), request.getUsername());
-        String friendUsername = userProfileUseCase.getProfileById(friend.getFriendId())
-                .map(UserProfile::getUsername)
-                .orElse(null);
-        FriendResponse response = FriendApiMapper.toResponse(friend, friendUsername);
-        messagingTemplate.convertAndSend("/topic/user/" + request.getUserId() + "/friends", response);
-
-        String requesterUsername = userProfileUseCase.getProfileById(request.getUserId())
-                .map(UserProfile::getUsername).orElse(null);
-        Friend reverseFriend = friendUseCase.getFriends(friend.getFriendId()).stream()
-                .filter(item -> request.getUserId().equals(item.getFriendId()))
-                .findFirst().orElse(null);
-        if (reverseFriend != null) {
-            messagingTemplate.convertAndSend(
-                    "/topic/user/" + friend.getFriendId() + "/friends",
-                    FriendApiMapper.toResponse(reverseFriend, requesterUsername));
-        }
+    public ResponseEntity<FriendResponse> sendRequest(
+            @Valid @RequestBody AddFriendRequest request,
+            @AuthenticationPrincipal Jwt jwt) {
+        String currentUserId = currentUserId(jwt);
+        Friend friendRequest = friendUseCase.sendFriendRequest(
+                currentUserId, request.getUsername());
+        FriendResponse response = responseForCounterpart(
+                friendRequest, friendRequest.getFriendId());
+        messagingTemplate.convertAndSend(
+                "/topic/user/" + friendRequest.getFriendId() + "/friend-requests",
+                responseForCounterpart(friendRequest, friendRequest.getUserId()));
         return ResponseEntity.ok(response);
     }
 
     @GetMapping("/user/{userId}")
-    public ResponseEntity<List<FriendResponse>> getFriends(@PathVariable String userId) {
+    public ResponseEntity<List<FriendResponse>> getFriends(
+            @PathVariable String userId,
+            @AuthenticationPrincipal Jwt jwt) {
+        requireCurrentUser(userId, jwt);
         List<Friend> friends = friendUseCase.getFriends(userId);
         List<String> friendIds = friends.stream()
                 .map(Friend::getFriendId)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+        Map<String, String> usernameById = usernamesById(friendIds);
+        return ResponseEntity.ok(friends.stream()
+                .map(friend -> FriendApiMapper.toResponse(
+                        friend, usernameById.get(friend.getFriendId())))
+                .toList());
+    }
 
-        Map<String, String> usernameById = userProfileUseCase.getProfilesByIds(friendIds).stream()
-                .collect(Collectors.toMap(UserProfile::getId, UserProfile::getUsername));
+    @GetMapping("/requests/incoming/{userId}")
+    public ResponseEntity<List<FriendResponse>> getIncomingRequests(
+            @PathVariable String userId,
+            @AuthenticationPrincipal Jwt jwt) {
+        requireCurrentUser(userId, jwt);
+        List<Friend> requests = friendUseCase.getIncomingRequests(userId);
+        Map<String, String> usernameById = usernamesById(requests.stream()
+                .map(Friend::getUserId)
+                .distinct()
+                .toList());
+        return ResponseEntity.ok(requests.stream()
+                .map(request -> responseForCounterpart(
+                        request, request.getUserId(), usernameById.get(request.getUserId())))
+                .toList());
+    }
 
-        List<FriendResponse> responses = friends.stream()
-                .map(friend -> FriendApiMapper.toResponse(friend, usernameById.get(friend.getFriendId())))
-                .collect(Collectors.toList());
+    @PostMapping("/requests/{requestId}/accept")
+    public ResponseEntity<FriendResponse> acceptRequest(
+            @PathVariable String requestId,
+            @RequestParam String userId,
+            @AuthenticationPrincipal Jwt jwt) {
+        requireCurrentUser(userId, jwt);
+        Friend accepted = friendUseCase.acceptRequest(requestId, userId);
+        String requesterId = accepted.getUserId();
+        FriendResponse recipientResponse = responseForCounterpart(accepted, requesterId);
+        messagingTemplate.convertAndSend(
+                "/topic/user/" + userId + "/friends", recipientResponse);
+        messagingTemplate.convertAndSend(
+                "/topic/user/" + requesterId + "/friends",
+                responseForCounterpart(accepted, userId));
+        return ResponseEntity.ok(recipientResponse);
+    }
 
-        return ResponseEntity.ok(responses);
+    @DeleteMapping("/requests/{requestId}")
+    public ResponseEntity<Void> rejectRequest(
+            @PathVariable String requestId,
+            @RequestParam String userId,
+            @AuthenticationPrincipal Jwt jwt) {
+        requireCurrentUser(userId, jwt);
+        friendUseCase.rejectRequest(requestId, userId);
+        return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/user/{userId}/{friendId}")
     public ResponseEntity<Void> removeFriend(
             @PathVariable String userId,
-            @PathVariable String friendId) {
+            @PathVariable String friendId,
+            @AuthenticationPrincipal Jwt jwt) {
+        requireCurrentUser(userId, jwt);
         friendUseCase.removeFriend(userId, friendId);
         return ResponseEntity.noContent().build();
+    }
+
+    private Map<String, String> usernamesById(List<String> ids) {
+        return userProfileUseCase.getProfilesByIds(ids).stream()
+                .collect(Collectors.toMap(UserProfile::getId, UserProfile::getUsername));
+    }
+
+    private String currentUserId(Jwt jwt) {
+        return userProfileUseCase.getProfileByExternalSub(jwt.getSubject())
+                .map(UserProfile::getId)
+                .orElseThrow(() -> new IllegalStateException(
+                        "Current chat profile was not found"));
+    }
+
+    private void requireCurrentUser(String userId, Jwt jwt) {
+        if (!currentUserId(jwt).equals(userId)) {
+            throw new IllegalArgumentException(
+                    "You cannot manage another user's friend relationships");
+        }
+    }
+
+    private FriendResponse responseForCounterpart(Friend friend, String counterpartId) {
+        String username = userProfileUseCase.getProfileById(counterpartId)
+                .map(UserProfile::getUsername)
+                .orElse(null);
+        return responseForCounterpart(friend, counterpartId, username);
+    }
+
+    private FriendResponse responseForCounterpart(
+            Friend friend, String counterpartId, String username) {
+        String ownerId = counterpartId.equals(friend.getUserId())
+                ? friend.getFriendId() : friend.getUserId();
+        Friend normalized = Friend.builder()
+                .id(friend.getId())
+                .userId(ownerId)
+                .friendId(counterpartId)
+                .status(friend.getStatus())
+                .createdAt(friend.getCreatedAt())
+                .build();
+        return FriendApiMapper.toResponse(normalized, username);
     }
 }
